Create Full Skeleton of html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,76 @@
     <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
+    <div class="Calculator">
+        <section class="Screen">
+            0
+        </section>
 
+        <section class="BTNS">
+            <div class="BTNRow">
+                <button class="BTN">
+                    C
+                </button>
+                <button class="BTN">
+                    &larr;
+                </button>
+                <button class="BTN">
+                    &divide;
+                </button>
+            </div>
+            <div class="BTNRow">
+                <button class="BTN">
+                    7
+                </button>
+                <button class="BTN">
+                    8
+                </button>
+                <button class="BTN">
+                    9
+                </button>
+                <button class="BTN">
+                    &times;
+                </button>
+            </div>
+            <div class="BTNRow">
+                <button class="BTN">
+                    4
+                </button>
+                <button class="BTN">
+                    5
+                </button>
+                <button class="BTN">
+                    6
+                </button>
+                <button class="BTN">
+                    &minus;
+                </button>
+            </div>
+            <div class="BTNRow">
+                <button class="BTN">
+                    1
+                </button>
+                <button class="BTN">
+                    2
+                </button>
+                <button class="BTN">
+                    3
+                </button>
+                <button class="BTN">
+                    &plus;
+                </button>
+            </div>
+            <div class="BTNRow">
+
+                <button class="BTN">
+                    0
+                </button>
+                <button class="BTN">
+                    &equals;
+                </button>
+            </div>
+        </section>
+    </div>
+    <script src="JS/index.js"></script>
 </body>
 </html>
