Created Styles and Program

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
         <section class="BTNS">
             <div class="BTNRow">
-                <button class="BTN">
+                <button class="BTN" id="Double">
                     C
                 </button>
                 <button class="BTN">
-                    &larr;
+                    ←
                 </button>
-                <button class="BTN">
+                <button class="BTN" id="Divide">
                     &divide;
                 </button>
             </div>
@@ -34,7 +34,7 @@
                 <button class="BTN">
                     9
                 </button>
-                <button class="BTN">
+                <button class="BTN" id="Times">
                     &times;
                 </button>
             </div>
@@ -48,8 +48,8 @@
                 <button class="BTN">
                     6
                 </button>
-                <button class="BTN">
-                    &minus;
+                <button class="BTN" id="Minus">
+                    -
                 </button>
             </div>
             <div class="BTNRow">
@@ -62,17 +62,17 @@
                 <button class="BTN">
                     3
                 </button>
-                <button class="BTN">
+                <button class="BTN" id="Plus">
                     &plus;
                 </button>
             </div>
             <div class="BTNRow">
 
-                <button class="BTN">
+                <button class="BTN" id="Num0">
                     0
                 </button>
-                <button class="BTN">
-                    &equals;
+                <button class="BTN" id="Equal">
+                    =
                 </button>
             </div>
         </section>
