--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     C
                 </button>
                 <button class="BTN">
+                    %
+                </button>
+                <button class="BTN">
                     ←
                 </button>
                 <button class="BTN" id="Divide">
