--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator Made by ParhamDanesh</title>
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+    <button class="ThemeBtn">
+        <i class="bi bi-palette"></i></button>
     <div class="Calculator">
         <section class="Screen">
             0
