Added Animation to Theme Selector

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
             </div>
         </section>
     </div>
+    <div class="ThemeSelector Invisible">
+        <button>Theme 1</button>
+        <button>Theme 2</button>
+        <button>Theme 3</button>
+    </div>
     <script src="JS/index.js"></script>
 </body>
 </html>
