added working themes and made basic Responsive

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
-    <button class="ThemeBtn">
+<body class="GradientAnim1">
+    <button class="ThemeBtn" title="Theme Selector">
         <i class="bi bi-palette"></i></button>
     <div class="Calculator">
         <section class="Screen">
@@ -84,9 +84,9 @@
         </section>
     </div>
     <div class="ThemeSelector Invisible">
-        <button>Theme 1</button>
-        <button>Theme 2</button>
-        <button>Theme 3</button>
+        <button id="DarkTheme">Dark</button>
+        <button id="LightTheme">Light (deafult)</button>
+        <button id="YellowRedTheme">Yellow & Light</button>
     </div>
     <script src="JS/index.js"></script>
 </body>
