Added Effects like Bubbles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body class="GradientAnim1">
     <button class="ThemeBtn" title="Theme Selector">
         <i class="bi bi-palette"></i></button>
+    <button class="EffectsBtn">
+        <i class="bi bi-circle-half"></i>   
+    </button>
     <div class="Calculator">
         <section class="Screen">
             0
@@ -86,7 +89,37 @@
     <div class="ThemeSelector Invisible">
         <button id="DarkTheme">Dark</button>
         <button id="LightTheme">Light (deafult)</button>
-        <button id="YellowRedTheme">Yellow & Light</button>
+        <button id="YellowRedTheme">Yellow & Light Red</button>
+    </div>
+    <div class="EffectSelector Invisible">
+        <button id="BubbleEffect">Bubbles</button>
+        <button id="DotsEffect">Dots</button>
+        <button id="BothEffect">Both</button>
+        <button id="NoEffect">None (deafult)</button>
+    </div>
+    <div id="background-wrap">
+        <div class="bubble x1 Invisible"></div>
+        <div class="bubble x2 Invisible"></div>
+        <div class="bubble x3 Invisible"></div>
+        <div class="bubble x4 Invisible"></div>
+        <div class="bubble x5 Invisible"></div>
+        <div class="bubble x6 Invisible"></div>
+        <div class="bubble x7 Invisible"></div>
+        <div class="bubble x8 Invisible"></div>
+        <div class="bubble x9 Invisible"></div>
+        <div class="bubble x10 Invisible"></div>
+    </div>
+    <div id="background-wrap">
+        <div class="Dot x1 Invisible"></div>
+        <div class="Dot x2 Invisible"></div>
+        <div class="Dot x3 Invisible"></div>
+        <div class="Dot x4 Invisible"></div>
+        <div class="Dot x5 Invisible"></div>
+        <div class="Dot x6 Invisible"></div>
+        <div class="Dot x7 Invisible"></div>
+        <div class="Dot x8 Invisible"></div>
+        <div class="Dot x9 Invisible"></div>
+        <div class="Dot x10 Invisible"></div>
     </div>
     <script src="JS/index.js"></script>
 </body>
