--- a/index.html
+++ b/index.html
@@ -6,14 +6,41 @@
     <title>Calculator Made by ParhamDanesh</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body class="GradientAnim1">
+
+      
+      <div class="offcanvas offcanvas-end BG-1 ThemeDivSelector" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasExampleLabel">Themes & Effects</h5>
+          <button type="button" class="btn-close btn-close-white  btn-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <div>
+                <h5 class="pb-3">Themes</h5>
+                <button class="BTNMobile" id="DarkTheme1">Dark</button>
+                <button class="BTNMobile" id="LightTheme1">Light (deafult)</button>
+                <button class="BTNMobile" id="YellowRedTheme1">Yellow & Light Red</button>
+          </div>
+          <div>
+            <h5 class="pb-3 pt-3">Effects</h5>
+            <button class="BTNMobile" id="BubbleEffect1">Bubbles</button>
+            <button class="BTNMobile" id="DotsEffect1">Dots</button>
+            <button class="BTNMobile" id="BothEffect1">Both</button>
+            <button class="BTNMobile" id="NoEffect1">None (deafult)</button>
+      </div>
+        </div>
+      </div>
     <button class="ThemeBtn" title="Theme Selector">
         <i class="bi bi-palette"></i></button>
     <button class="EffectsBtn">
         <i class="bi bi-circle-half"></i>   
     </button>
     <div class="Calculator">
+        <button class="ThemeEffectBtn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+            <i class="bi bi-palette"></i>
+          </button>
         <section class="Screen">
             0
         </section>
@@ -122,5 +149,6 @@
         <div class="Dot x10 Invisible"></div>
     </div>
     <script src="JS/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
