--- a/index.html
+++ b/index.html
@@ -1,154 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator Made by ParhamDanesh</title>
-    <link rel="stylesheet" href="CSS/index.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-</head>
-<body class="GradientAnim1">
-
-      
-      <div class="offcanvas offcanvas-end BG-1 ThemeDivSelector" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasExampleLabel">Themes & Effects</h5>
-          <button type="button" class="btn-close btn-close-white  btn-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <div>
-                <h5 class="pb-3">Themes</h5>
-                <button class="BTNMobile" id="DarkTheme1">Dark</button>
-                <button class="BTNMobile" id="LightTheme1">Light (deafult)</button>
-                <button class="BTNMobile" id="YellowRedTheme1">Yellow & Light Red</button>
-          </div>
-          <div>
-            <h5 class="pb-3 pt-3">Effects</h5>
-            <button class="BTNMobile" id="BubbleEffect1">Bubbles</button>
-            <button class="BTNMobile" id="DotsEffect1">Dots</button>
-            <button class="BTNMobile" id="BothEffect1">Both</button>
-            <button class="BTNMobile" id="NoEffect1">None (deafult)</button>
+    <link rel="stylesheet" href="CSS/index.css" />
+  </head>
+  <body class="GradientAnim1">
+    <button class="ToggleBTN">
+      <div class="ToggleBTNTop"></div>
+      <div class="ToggleBTNMiddle"></div>
+      <div class="ToggleBTNBottom"></div>
+    </button>
+    <div class="offcanvas">
+      <div class="closeOffcanvasBTN">
+        <div class="Top"></div>
+        <div class="Bottom"></div>
       </div>
-        </div>
+      <div>
+        <h5>Themes</h5>
+        <button class="BTNMobile" id="DarkTheme1">Dark</button>
+        <button class="BTNMobile" id="LightTheme1">Light (deafult)</button>
+        <button class="BTNMobile" id="YellowRedTheme1">
+          Yellow & Light Red
+        </button>
       </div>
+      <div class="EffectsOffcanvas">
+        <h5>Effects</h5>
+        <button class="BTNMobile" id="BubbleEffect1">Bubbles</button>
+        <button class="BTNMobile" id="DotsEffect1">Dots</button>
+        <button class="BTNMobile" id="BothEffect1">Both</button>
+        <button class="BTNMobile" id="NoEffect1">None (deafult)</button>
+      </div>
+    </div>
     <button class="ThemeBtn" title="Theme Selector">
-        <i class="bi bi-palette"></i></button>
+      <img src="pallete-2-svgrepo-com.svg" style="width: 80px;" alt="Pallete Logo">
+    </button>
     <button class="EffectsBtn">
-        <i class="bi bi-circle-half"></i>   
+      <img src="effect-magic-sparkles-svgrepo-com.svg" style="width: 80px;" alt="Effect Logo">
     </button>
     <div class="Calculator">
-        <button class="ThemeEffectBtn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-            <i class="bi bi-palette"></i>
-          </button>
-        <section class="Screen">
-            0
-        </section>
+      <section class="Screen">0</section>
 
-        <section class="BTNS">
-            <div class="BTNRow">
-                <button class="BTN" id="Double">
-                    C
-                </button>
-                <button class="BTN">
-                    %
-                </button>
-                <button class="BTN">
-                    ←
-                </button>
-                <button class="BTN" id="Divide">
-                    &divide;
-                </button>
-            </div>
-            <div class="BTNRow">
-                <button class="BTN">
-                    7
-                </button>
-                <button class="BTN">
-                    8
-                </button>
-                <button class="BTN">
-                    9
-                </button>
-                <button class="BTN" id="Times">
-                    &times;
-                </button>
-            </div>
-            <div class="BTNRow">
-                <button class="BTN">
-                    4
-                </button>
-                <button class="BTN">
-                    5
-                </button>
-                <button class="BTN">
-                    6
-                </button>
-                <button class="BTN" id="Minus">
-                    -
-                </button>
-            </div>
-            <div class="BTNRow">
-                <button class="BTN">
-                    1
-                </button>
-                <button class="BTN">
-                    2
-                </button>
-                <button class="BTN">
-                    3
-                </button>
-                <button class="BTN" id="Plus">
-                    &plus;
-                </button>
-            </div>
-            <div class="BTNRow">
-
-                <button class="BTN" id="Num0">
-                    0
-                </button>
-                <button class="BTN" id="Equal">
-                    =
-                </button>
-            </div>
-        </section>
+      <section class="BTNS">
+        <div class="BTNRow">
+          <button class="BTN" id="Double">C</button>
+          <button class="BTN">%</button>
+          <button class="BTN">←</button>
+          <button class="BTN" id="Divide">&divide;</button>
+        </div>
+        <div class="BTNRow">
+          <button class="BTN">7</button>
+          <button class="BTN">8</button>
+          <button class="BTN">9</button>
+          <button class="BTN" id="Times">&times;</button>
+        </div>
+        <div class="BTNRow">
+          <button class="BTN">4</button>
+          <button class="BTN">5</button>
+          <button class="BTN">6</button>
+          <button class="BTN" id="Minus">-</button>
+        </div>
+        <div class="BTNRow">
+          <button class="BTN">1</button>
+          <button class="BTN">2</button>
+          <button class="BTN">3</button>
+          <button class="BTN" id="Plus">&plus;</button>
+        </div>
+        <div class="BTNRow">
+          <button class="BTN" id="Num0">0</button>
+          <button class="BTN" id="Equal">=</button>
+        </div>
+      </section>
     </div>
     <div class="ThemeSelector Invisible">
-        <button id="DarkTheme">Dark</button>
-        <button id="LightTheme">Light (deafult)</button>
-        <button id="YellowRedTheme">Yellow & Light Red</button>
+      <button id="DarkTheme">Dark</button>
+      <button id="LightTheme">Light (deafult)</button>
+      <button id="YellowRedTheme">Yellow & Light Red</button>
     </div>
     <div class="EffectSelector Invisible">
-        <button id="BubbleEffect">Bubbles</button>
-        <button id="DotsEffect">Dots</button>
-        <button id="BothEffect">Both</button>
-        <button id="NoEffect">None (deafult)</button>
+      <button id="BubbleEffect">Bubbles</button>
+      <button id="DotsEffect">Dots</button>
+      <button id="BothEffect">Both</button>
+      <button id="NoEffect">None (deafult)</button>
     </div>
     <div id="background-wrap">
-        <div class="bubble x1 Invisible"></div>
-        <div class="bubble x2 Invisible"></div>
-        <div class="bubble x3 Invisible"></div>
-        <div class="bubble x4 Invisible"></div>
-        <div class="bubble x5 Invisible"></div>
-        <div class="bubble x6 Invisible"></div>
-        <div class="bubble x7 Invisible"></div>
-        <div class="bubble x8 Invisible"></div>
-        <div class="bubble x9 Invisible"></div>
-        <div class="bubble x10 Invisible"></div>
+      <div class="bubble x1 Invisible"></div>
+      <div class="bubble x2 Invisible"></div>
+      <div class="bubble x3 Invisible"></div>
+      <div class="bubble x4 Invisible"></div>
+      <div class="bubble x5 Invisible"></div>
+      <div class="bubble x6 Invisible"></div>
+      <div class="bubble x7 Invisible"></div>
+      <div class="bubble x8 Invisible"></div>
+      <div class="bubble x9 Invisible"></div>
+      <div class="bubble x10 Invisible"></div>
     </div>
     <div id="background-wrap">
-        <div class="Dot x1 Invisible"></div>
-        <div class="Dot x2 Invisible"></div>
-        <div class="Dot x3 Invisible"></div>
-        <div class="Dot x4 Invisible"></div>
-        <div class="Dot x5 Invisible"></div>
-        <div class="Dot x6 Invisible"></div>
-        <div class="Dot x7 Invisible"></div>
-        <div class="Dot x8 Invisible"></div>
-        <div class="Dot x9 Invisible"></div>
-        <div class="Dot x10 Invisible"></div>
+      <div class="Dot x1 Invisible"></div>
+      <div class="Dot x2 Invisible"></div>
+      <div class="Dot x3 Invisible"></div>
+      <div class="Dot x4 Invisible"></div>
+      <div class="Dot x5 Invisible"></div>
+      <div class="Dot x6 Invisible"></div>
+      <div class="Dot x7 Invisible"></div>
+      <div class="Dot x8 Invisible"></div>
+      <div class="Dot x9 Invisible"></div>
+      <div class="Dot x10 Invisible"></div>
     </div>
     <script src="JS/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
